2009-05-28  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Oliver Hunt.
        
        https://bugs.webkit.org/show_bug.cgi?id=8736

        * fast/borders/border-radius-constraints.html: Added.
        * platform/mac/fast/borders/border-radius-constraints-expected.checksum: Added.
        * platform/mac/fast/borders/border-radius-constraints-expected.png: Added.
        * platform/mac/fast/borders/border-radius-constraints-expected.txt: Added.
        
        Test that corner radii are constrained according to CSS3 rules.

        * fast/borders/border-radius-huge-assert.html:
        * platform/mac/fast/borders/border-radius-huge-assert-expected.checksum:
        * platform/mac/fast/borders/border-radius-huge-assert-expected.png:
        * platform/mac/fast/borders/border-radius-huge-assert-expected.txt:
        
        Now that we constrain border-radius, update the text of the test, and the
        expected result.
        
        * fast/borders/border-radius-split-inline.html: Added.
        * platform/mac/fast/borders/border-radius-split-inline-expected.checksum: Added.
        * platform/mac/fast/borders/border-radius-split-inline-expected.png: Added.
        * platform/mac/fast/borders/border-radius-split-inline-expected.txt: Added.
        
        New test for border-radius on a split inline.
        
        * fast/box-shadow/border-radius-big.html:
        * platform/mac/fast/box-shadow/border-radius-big-expected.checksum:
        * platform/mac/fast/box-shadow/border-radius-big-expected.png:
        * platform/mac/fast/box-shadow/border-radius-big-expected.txt:

        Now that we constrain border-radius, update the text of the test, and the
        expected result.

2009-05-28  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=26005
        Optimization for XPath //* does not preserve context size

        * fast/xpath/position-expected.txt: Added.